--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4",
-    "axios": "^1.7.9",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "chai": "^4.4.3",
-    "jest": "^29.7.0",
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
     "mocha": "^11.1.0",
     "prettier": "^3.4.2",
     "readline-sync": "^1.4.10",
